--- a/styles/style.css
+++ b/styles/style.css
@@ -102,13 +102,15 @@ ul {
 .two-columns__main-text{
   min-width: 784px;
   width:80%;
+  display:flex;
+  flex-direction: column;
+  gap:30px;
 }
 .two-columns__paragraph{
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
   margin:0;
-  margin-bottom: 30px;
 }
 .two-columns__span-accent{
   font-weight: 600;
